src/app/components/carousel/carousel.component.css
.carousel-container {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: -200px;
  height: 550px;
  margin-bottom: 40px;
  position: relative;
  overflow: hidden;
}

.carousel-slides {
  width: var(--content-width);
  position: relative;
  height: 100%;
  overflow: hidden;
}

.slides-container {
  display: flex;
  transition: transform 0.5s ease-in-out;
  height: 100%;
}

.slide {
  flex: 0 0 100%;
  width: 100%;
  height: 100%;
  transition: transform 0.5s ease-in-out;
}

.slide__content {
  display: flex;
  cursor: pointer;
  height: 100%;
}

img {
  width: 50%;
  border-radius: 10px;
  object-fit: cover;
  object-position: center;
}

.project-info {
  width: 50%;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.project-title {
  color: var(--verde-100);
  margin: 3vw 1vw 0 3vw;
}

.nav-button {
  position: relative;
  top: 20px;
  width: 60px;
  height: 50px;
  background-color: var(--branco-100);
  border-radius: 23px;
  border: none;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 2;
}

.nav-button.left {
  left: 30px;
}

.nav-button.right {
  right: 30px;
}

.carousel-indicators {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  position: absolute;
  bottom: 20px;
  left: 69vw;
  transform: translateX(-50%);
  z-index: 2;
}

.indicator {
  width: 12px;
  height: 12px;
  background-color: var(--cinza-300);
  border-radius: 50%;
}

.indicator.active {
  background-color: var(--verde-100);
  width: 18px;
  height: 18px;
}

.project-description {
  overflow: hidden;
  margin: 0 3vw 7vh 3vw;
}

@media (max-width: 620px) {
  .carousel-highlights {
    display: none;
  }

  .carousel-container {
    margin-top: 0;
    margin-bottom: 0;
    height: 100vw;
    width: 100%;
  }

  .nav-button {
    width: 10vw;
    height: 10vw;
    border-radius: 50%;
  }

  .slide-image {
    width: 100vw;
    border-radius: 0;
    margin-left: -10vw;
  }

  .slide__content {
    position: relative;
  }

  .project-info {
    width: 100vw;
    height: 100vw;
    left: -10vw;
    bottom: 0;
    position: absolute;
    background-color: rgba(0, 0, 0, 0.6);
    padding: 0;
  }

  .project-title {
    margin: 10vw 5vw;
    text-align: center;
  }

  .carousel-indicators {
    margin-bottom: 3vw;
    left: 50vw;
  }

  .carousel-slides {
    width: 100%;
  }

  .p-02 {
    display: none;
  }
}

